--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "tut2",
 	"version": "0.1.0",
-	"homepage": "https://jsjsam.github.io/react_deploy_gh",
+	"homepage": "https://jsjsam98.github.io/react_deploy_gh",
 	"private": true,
 	"dependencies": {
 		"axios": "^1.3.4",
 		"date-fns": "^2.29.3",
+		"json-server": "^0.17.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
